Tested GfrRuleApplier (<30 mL/min-avoid,<60 mL/min - reduce 50%, class B action:  interval 12h , class C action: avoid use ) — all correct