@@ -6,31 +6,42 @@ import org.springframework.stereotype.Component;
 import pain_helper_back.common.patients.entity.DrugRecommendation;
 import pain_helper_back.common.patients.entity.Patient;
 import pain_helper_back.common.patients.entity.Recommendation;
+import pain_helper_back.enums.DrugRole;
 import pain_helper_back.treatment_protocol.entity.TreatmentProtocol;
 import pain_helper_back.treatment_protocol.utils.DrugUtils;
 
-import java.util.ArrayList;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
-//@Component
+@Component
 @Order(9)
 @Slf4j
 public class GfrRuleApplier implements TreatmentRuleApplier {
 
+    //      "Class B - 12h" или "Class C - avoid"
+    //      "<30 mL/min - avoid" или "<60 mL/min - reduce by 50%"
+    //      Ловит несколько классов в одной строке (class B … class C …).
+    //      Теперь также поддерживает и вариант без слова "class", например "B - 12h".
+    //      Не зависим от регистра ((?i)).
     private static final Pattern COMPLEX_PATTERN = Pattern.compile(
-            "(Class\\s*[ABC])\\s*-\\s*([^C]+)(?=$|Class)|(<\\d+[^-]*)-\\s*([^A-Z]+)"
+            "(?i)" +
+                    //  1) первая ветка — буквенные классы (A–F)
+                    //     ловит и "class B ..." и просто "B ..."
+                    "(?:class\\s*)?([A-F])(?:\\s*action)?\\s*[:\\-]\\s*([^<]+?)(?=$|\\bclass\\b|<\\d+\\s*mL/min)" +
+                    "|" +
+                    //  2) вторая ветка — числовые пороги, например "<30 mL/min - avoid"
+                    "(<\\d+\\s*mL/min)\\s*[-:]\\s*([^<]+)"
     );
 
+    //    Диапазоны для категорий GFR (в мл/мин)
     private static final Map<String, double[]> GFR_CLASSES = Map.of(
             "A", new double[]{90, Double.MAX_VALUE},
             "B", new double[]{60, 89},
-            "C", new double[]{30, 59},
-            "D", new double[]{15, 29},
-            "E", new double[]{0, 14}
+            "C", new double[]{45, 59},
+            "D", new double[]{30, 44},
+            "E", new double[]{15, 29},
+            "F", new double[]{0, 14}
     );
 
     @Override
@@ -40,147 +51,233 @@ public class GfrRuleApplier implements TreatmentRuleApplier {
                       Patient patient,
                       List<String> rejectionReasons) {
 
+        // Если препарат не имеет данных (например, очищен предыдущим фильтром) — пропускаем
         if (!DrugUtils.hasInfo(drug)) return;
 
-        String patientGfr = patient.getEmr().getLast().getGfr();
-        String normalizedPatientGfr = normalizeGfrValue(patientGfr);
-        String gfrRule = tp.getGfr();
+        String patientGfr = patient.getEmr().getLast().getGfr();  // берём данные gfr пациента (букву или цифру 0-120)
+        String normalizedGfr = normalizeGfrValue(patientGfr);     // нормализуем эти данные, вернёт конкретную группу A|B|C|D|E|F
+        String gfrRule = tp.getGfr();                             // берём правило протокола
 
-        if (gfrRule == null || gfrRule.trim().isEmpty() || gfrRule.toUpperCase().contains("NA")) return;
+        // Если правило не задано или "NA" — выходим
+        if (gfrRule == null || gfrRule.isBlank() || gfrRule.equalsIgnoreCase("NA")) return;
 
         log.info("=== [START] {} for Patient ID={} ===", getClass().getSimpleName(), patient.getId());
 
-        Matcher m = COMPLEX_PATTERN.matcher(gfrRule);
-        Map<String, String> rules = new HashMap<>();
-        while (m.find()) {
-            String key = m.group(1) != null ? m.group(1).replace("Class", "").trim() : m.group(3).trim();
-            String value = m.group(2) != null ? m.group(2).trim() : m.group(4).trim();
-            rules.put(key, value);
-        }
+        //   Разбор текста из столбца GFR в протоколе (Class B ... или <30 ...)
+        Map<String, String> rules = new LinkedHashMap<>(); // создание LinkedHashMap для каждого правила из строки протокола, с сохранением порядка добавления из протокола
 
-        String patientRule = rules.get(normalizedPatientGfr);
+        //  Парсинг строки протокола регуляркой, которая разделит все совпадения по группам (group 1/2/3/4)
+        Matcher matcher = COMPLEX_PATTERN.matcher(gfrRule);
+        while (matcher.find()) {
+            // --- Новый механизм групп:
+            // group(1) → буква класса (A–F)
+            // group(2) → действие для класса (например, "interval 12h" или "avoid use")
+            // group(3) → числовой порог (<30 mL/min)
+            // group(4) → действие для числового порога (например, "reduce by 50%")
 
-        if (patientRule == null) {
-            double gfrValue;
-            if (normalizedPatientGfr != null && normalizedPatientGfr.matches("[A-E]")) {
-                gfrValue = getAverageGfrForClass(normalizedPatientGfr);
+            String key;
+            String value;
+
+            if (matcher.group(1) != null) {
+                // === Случай 1: найден буквенный класс (A–F)
+                // Пример: "class B action: interval 12h"
+                // group(1) = "B"
+                // group(2) = "interval 12h"
+                key = matcher.group(1).toUpperCase();          // ключ = "B" (буква класса)
+                value = matcher.group(2).trim();               // значение = действие ("interval 12h")
+                // Примерный результат: ("B", "interval 12h")
+
+            } else if (matcher.group(3) != null) {
+                // === Случай 2: найден числовой порог (<30 mL/min)
+                // Пример: "<30 mL/min - avoid"
+                // group(3) = "<30 mL/min"
+                // group(4) = "avoid"
+                key = matcher.group(3).trim();                 // ключ = "<30 mL/min"
+                value = matcher.group(4).trim();               // значение = действие ("avoid")
+                // Примерный результат: ("<30 mL/min", "avoid")
+
             } else {
-                gfrValue = Double.parseDouble(patientGfr.replaceAll("[^\\d.]", ""));
+                // если по какой-то причине ничего не поймано — пропускаем итерацию
+                continue;
             }
 
-            for (Map.Entry<String, String> e : rules.entrySet()) {
-                if (e.getKey().startsWith("<")) {
-                    double limit = Double.parseDouble(e.getKey().replaceAll("[^\\d.]", ""));
-                    if (gfrValue < limit) {
-                        patientRule = e.getValue();
-                        break;
-                    }
-                }
-            }
+            //  Добавляем найденную пару в LinkedHashMap, чтобы сохранить порядок из Excel
+            rules.put(key, value);
+
+            //  Для наглядности логируем найденные соответствия
+            log.debug("[GFR] Parsed rule: key='{}' → value='{}'", key, value);
         }
 
-        if (patientRule == null) {
+//  После этого у нас может быть, например:
+//  rules = { "B"="interval 12h", "C"="avoid use", "<30 mL/min"="avoid" }
+        //    Определяем правило, соответствующее GFR пациента
+        String matchedRule = findMatchingRule(rules, normalizedGfr, patientGfr);
+
+        if (matchedRule == null) {
             log.info("No GFR rule matched for patient={} (value={})", patient.getId(), patientGfr);
             log.info("=== [END] {} for Patient ID={} ===", getClass().getSimpleName(), patient.getId());
             return;
         }
 
-        patientRule = patientRule.toLowerCase();
+        matchedRule = matchedRule.toLowerCase();
+        recommendation.getComments().add("System: applied GFR rule → " + gfrRule);
 
-        if (recommendation.getComments() == null)
-            recommendation.setComments(new ArrayList<>());
-
-        // === AVOID CASE ===
-        if (patientRule.contains("avoid")) {
-            recommendation.getComments().add("System: avoid for GFR rule " + gfrRule);
+        //   AVOID CASE — исключить всю рекомендацию
+        if (matchedRule.contains("avoid")) {
             rejectionReasons.add(String.format(
-                    "[%s] Avoid recommendation with drugs (%s and %s) for GFR value %s (rule='%s')",
-                    getClass().getSimpleName(),
-                    recommendation.getDrugs().getFirst().getDrugName(),
-                    recommendation.getDrugs().get(1).getActiveMoiety(),
-                    patientGfr,
-                    gfrRule
+                    "[%s] Avoid all drugs for patient (GFR=%s, rule='%s')",
+                    getClass().getSimpleName(), patientGfr, gfrRule
             ));
-            log.warn("Avoid triggered by GFR rule: patient={}, value={}, rule={}", patient.getId(), patientGfr, gfrRule);
+            log.warn("[GFR] Avoid triggered → patient={} value={} rule={}", patient.getId(), patientGfr, gfrRule);
 
             for (DrugRecommendation d : recommendation.getDrugs()) {
                 DrugUtils.clearDrug(d);
             }
-
             log.info("=== [END] {} for Patient ID={} ===", getClass().getSimpleName(), patient.getId());
             return;
         }
 
-        // === REDUCE CASE ===
-        if (patientRule.contains("reduce")) {
-            Matcher perc = Pattern.compile("(\\d+)%").matcher(patientRule);
-            if (perc.find() && drug.getDosing() != null) {
-                String originalDose = drug.getDosing();
-                String percent = perc.group(1);
-                recommendation.getComments().add(String.format(
-                        "System: reduce dose by %s%% (original dosing: %s) due to GFR rule: %s",
-                        percent,
-                        originalDose,
-                        gfrRule
-                ));
-            }
+        //   REDUCE CASE — уменьшить дозировку или добавить комментарий
+        if (matchedRule.contains("reduce")) {
+            applyReduction(drug, recommendation, matchedRule, gfrRule);
         }
 
-        // === INTERVAL ADJUSTMENT CASE ===
-        Matcher h = Pattern.compile("(\\d+)\\s*h").matcher(patientRule);
-        if (h.find()) {
-            String newInterval = h.group(1) + "h";
-            drug.setInterval(newInterval);
-            recommendation.getComments().add(
-                    String.format("System: interval set to %s due to GFR rule: %s", newInterval, gfrRule)
-            );
-        }
+        //   INTERVAL CASE — изменить интервал приёма (8h, 12h и т.д.)
+        applyIntervalChange(drug, recommendation, matchedRule, gfrRule);
 
-        log.info("Applied GFR rule '{}' for patient={} (value={})", patientRule, patient.getId(), patientGfr);
+        log.info("[GFR] Applied rule '{}' for {} (GFR={}, protocol={})",
+                matchedRule, drug.getActiveMoiety(), patientGfr, tp.getId());
         log.info("=== [END] {} for Patient ID={} ===", getClass().getSimpleName(), patient.getId());
     }
 
-    // ------------------------- Helpers ----------------------------
+    // ---------------------- Вспомогательные методы ----------------------
 
+    /** Нормализация значения GFR (буква → класс, число → диапазон) */
     private String normalizeGfrValue(String rawGfr) {
         if (rawGfr == null || rawGfr.isBlank()) return null;
 
-        if (rawGfr.matches("(?i)[abcde]")) {
+        // Если ввели букву A – F
+        if (rawGfr.matches("(?i)[A-F]")) {
             return rawGfr.toUpperCase();
         }
 
-        double value = Double.parseDouble(rawGfr.replaceAll("[^\\d.]", ""));
+        // Если ввели число (например, "78 ml/min")
+        try {
+            double value = Double.parseDouble(rawGfr.replaceAll("[^\\d.]", "")); // очищаем число от всего лишнего
+            for (Map.Entry<String, double[]> entry : GFR_CLASSES.entrySet()) {                  // пробегаем GFR_CLASSES с этим числом и ищем букву, в диапазон которой оно попадает
+                double min = entry.getValue()[0];
+                double max = entry.getValue()[1];
+                if (value >= min && value <= max) {
+                    return entry.getKey();
+                }
+            }
+            // если ввели белиберду
+        } catch (NumberFormatException e) {
+            log.warn("[GFR] Invalid input '{}', skipping normalization", rawGfr);
+        }
+        return null;
+    }
+
+    /* Подбор подходящего правила по классу или порогу */
+    private String findMatchingRule(Map<String, String> rules, String normalizedGfr, String rawGfr) {
+        // 1 Прямое совпадение по классу (A – F)
+        if (normalizedGfr != null && rules.containsKey(normalizedGfr)) {
+            return rules.get(normalizedGfr);
+        }
+
+        // 2 Сопоставление буквенных категорий с числовыми порогами (<60 и т.п.)
+        if (normalizedGfr != null) {
+            double[] range = GFR_CLASSES.getOrDefault(normalizedGfr, new double[]{0, 0});
+            double lowerBound = range[0];
+            double upperBound = range[1];
+
+            for (Map.Entry<String, String> e : rules.entrySet()) {
+                if (e.getKey().startsWith("<")) {
+                    double limit = Double.parseDouble(e.getKey().replaceAll("[^\\d.]", ""));
+                    // если верхняя граница класса меньше лимита (<60 для C=45-59)
+                    if (upperBound < limit) {
+                        return e.getValue();
+                    }
+                }
+            }
+        }
+
+        // 3 Поиск числового совпадения (если пациент ввёл значение числом)
+        try {
+            double gfrValue = Double.parseDouble(rawGfr.replaceAll("[^\\d.]", ""));
+            for (Map.Entry<String, String> e : rules.entrySet()) {
+                if (e.getKey().startsWith("<")) {
+                    double limit = Double.parseDouble(e.getKey().replaceAll("[^\\d.]", ""));
+                    if (gfrValue < limit) {
+                        return e.getValue();
+                    }
+                }
+            }
+
+            // --------------------- [НОВЫЙ БЛОК] ---------------------
+            // 4. Если пациент ввёл GFR числом, а в протоколе указаны буквенные классы (A–F)
+            //    Тогда нужно определить, к какому классу относится это число, и применить соответствующее правило
+            String gfrClassFromNumber = mapGfrToLetter(gfrValue);
+            if (gfrClassFromNumber != null && rules.containsKey(gfrClassFromNumber)) {
+                log.info("[GFR] Matched numeric value {} → class {} (rule={})", gfrValue, gfrClassFromNumber, rules.get(gfrClassFromNumber));
+                return rules.get(gfrClassFromNumber);
+            }
+            // --------------------------------------------------------
+
+        } catch (NumberFormatException ignored) {}
+
+        return null;
+    }
+
+    /** Преобразование числового значения GFR в буквенную категорию (A–F) */
+    private String mapGfrToLetter(double gfrValue) {
         for (Map.Entry<String, double[]> entry : GFR_CLASSES.entrySet()) {
             double min = entry.getValue()[0];
             double max = entry.getValue()[1];
-            if (value >= min && value <= max) {
+            if (gfrValue >= min && gfrValue <= max) {
                 return entry.getKey();
             }
         }
         return null;
     }
+    /** Применение правила снижения дозировки */
+    private void applyReduction(DrugRecommendation drug, Recommendation rec, String rule, String gfrRule) {
+        Matcher m = Pattern.compile("(\\d+)%").matcher(rule);
+        if (m.find() && drug.getDosing() != null) {
+            String percent = m.group(1);
+            String oldDose = drug.getDosing();
 
-    private double getAverageGfrForClass(String gfrClass) {
-        double[] range = GFR_CLASSES.get(gfrClass);
-        if (range == null) return Double.NaN;
-        return (range[0] + range[1]) / 2.0;
+            //  Можно вычислить новую дозу, если это число
+            Matcher d = Pattern.compile("(\\d+(?:\\.\\d+)?)").matcher(oldDose);
+            if (d.find()) {
+                double original = Double.parseDouble(d.group(1));
+                double reduced = original * (1 - Integer.parseInt(percent) / 100.0);
+                drug.setDosing(String.format("%.0f mg", reduced));
+                rec.getComments().add(String.format(
+                        "System: reduced dose by %s%% (%s → %.0f mg) due to GFR rule: %s",
+                        percent, oldDose, reduced, gfrRule
+                ));
+                log.info("[GFR] Dose reduced: {} mg → {} mg ({}%)", original, reduced, percent);
+            } else {
+                rec.getComments().add(String.format(
+                        "System: reduce dose by %s%% (original dosing: %s)", percent, oldDose));
+            }
+        }
+    }
+
+    /** Применение изменения интервала (8h, 12h и т.п.) */
+    private void applyIntervalChange(DrugRecommendation drug, Recommendation rec, String rule, String gfrRule) {
+        Matcher m = Pattern.compile("(\\d+)\\s*h").matcher(rule);
+        if (m.find()) {
+            String newInterval = m.group(1) + "h";
+
+            //  Если указано "first drug" → применяем только к MAIN
+            if (rule.contains("first") && drug.getRole() != DrugRole.MAIN) return;
+
+            drug.setInterval(newInterval);
+            rec.getComments().add(String.format("System: interval set to %s due to GFR rule: %s", newInterval, gfrRule));
+            log.info("[GFR] Interval changed to {} for {}", newInterval, drug.getActiveMoiety());
+        }
     }
 }
-
- /*
- Итого этот фильтр:
-
-Принимает ввод врача в двух форматах: число или буква (A–E) — и унифицирует это через normalizeGfrValue().
-Понимает протокол даже если он написан в произвольной форме (Class B - 12h, <60 ml/min - avoid).
-Делает перекрёстное сопоставление, если типы не совпадают — т.е. врач ввёл букву, а в протоколе цифры, и наоборот.
-Это именно то, чего часто не хватает в "умных" фильтрах.
-
-Применяет три сценария:
-avoid → исключить лекарство, добавить комментарий
-reduce by N% → уменьшить дозу
-8h, 12h и т. д. → изменить интервал приёма
-
-Всё это делает в рамках интерфейса TreatmentRuleApplier, что даёт
- настоящий полиморфизм и расширяемость микросервиса.*/
-
 
